k8s-step-by-step/01-utils/06-ingress-controler/Service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  # Открываем порты только на тех машинах, где находятся
  # поды контроллера
  # externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      nodePort: 31080
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      nodePort: 31443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
